--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,13 @@
-# Core Snowflake Dependencies
-snowflake-snowpark-python>=1.11.0
-snowflake-ml-python>=1.5.0
+# Snowflake
 snowflake-connector-python>=3.7.0
 
-# Dashboard & UI
+# Dashboard
 streamlit>=1.31.0
+altair>=5.0.0
+pandas>=2.0.0
 
 # Testing
 pytest>=8.0.0
-pytest-cov>=4.1.0
-pytest-mock>=3.12.0
 
-# Security & Code Analysis
-GitPython>=3.1.41
-requests>=2.31.0
-pyyaml>=6.0.1
-
-# Environment & Configuration
+# Environment
 python-dotenv>=1.0.0
-
-# Development Tools
-black>=24.1.0
-ruff>=0.1.15
-mypy>=1.8.0
-
-# Utilities
-typing-extensions>=4.9.0
