--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-# Snowflake
+# Snowflake (data storage + Cortex analytics)
 snowflake-connector-python>=3.7.0
 
-# Dashboard
+# Gemini (security scanning AI)
+google-genai>=1.0.0
+
+# Dashboard (Legacy Streamlit)
 streamlit>=1.31.0
 altair>=5.0.0
 pandas>=2.0.0
+
+# API Backend (New)
+fastapi>=0.100.0
+uvicorn>=0.23.0
 
 # Testing
 pytest>=8.0.0
