--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ build/
 __pycache__/
 *.pyc
 *.pyo
+.next/
 
 # IDE and editor files
 .vscode/
@@ -36,3 +37,7 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Windows reserved names
+nul
+NUL
